...
                            }
                        }
                    }
                }
            } else {
                Text(
                    "Diese Sachen hast du seit über einem Jahr nicht mehr getragen:",
                    modifier = Modifier.padding(16.dp),
                    style = MaterialTheme.typography.bodyMedium
                )
                LazyVerticalGrid(
                    columns = GridCells.Fixed(2),
                    modifier = Modifier
...
                ) {
                    items(clothesToDiscard) { clothItem ->
                        val isSelected = clothItem.id in selectedIds
                        DiscardItemContainer(
                            item = clothItem,
                            isSelected = isSelected,
                            modifier = Modifier.testTag("DiscardItem"),
                            onClick = {
                                selectedIds = if (isSelected) {
                                    selectedIds - clothItem.id
                                } else {
                                    selectedIds + clothItem.id
                                }
...
