...
        topBar = {
            Header(
                onNavigateBack = { },
                onNavigateToRightIcon = { onNavigateToDiscard() },
                clothesData = null,
                headerText = "Dein Kleiderschrank",
                rightIconContentDescription = "Vorschläge zum Aussortieren",
                rightIcon = Icons.Default.DeleteSweep,
                isFirstHeader = true
            )
        }
    ) { padding ->
        Column(modifier = Modifier
...
